Fixed menu spacing issue

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -542,8 +542,8 @@ div[role="main"] {
 
                         .inner-item {
                             display:block;
-                            padding-bottom: 2em;
-                            margin-bottom: 2.5em;
+                            padding-bottom: 1em;
+                            margin-bottom: 1em;
                             width: 100%;
                             h3 {    /* menu-item-name */  
                                 padding: 0 0 0.15em;
